[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "hippo_v2"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
# TODO(4) Select the correct rtic backend
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
# TODO(5) Add hal as dependency
stm32f4xx-hal = { version = "0.23", features = [ "stm32f401", "rtic2","rtic-tim3"] }

# TODO add a monotonic if you use scheduling
rtic-monotonics = { version = "2.0.0", features = [ "cortex-m-systick" ]}
defmt-rtt = "*"
rtic-time = "*"

ili9341 = "0.6"
#ili9341 = { path = "../ili9341-rs" }
display-interface-spi = "0.5"
embedded-hal = "1.0"
nb = "1"
cortex-m-rt = "0.7"
panic-halt = "1.0"
static_cell = "*"
embedded-hal-bus = "*"
stm32f4 = "0.16.0"
include_data = "1.0.1"

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }


[build-dependencies]
toml = "*"
image = "0.25.8"
serde = "1.0.136"
serde_derive = "1.0.136"
embedded-graphics = "0.6.2"
rgb565 = "0.1.3"
